--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/index.css">
     <style>
         .container {
-         width: 1500px;
+         width: 1300px;
          height: 400px;
-         background-image: linear-gradient(to right, #E2BCBB, #E4514A);
+         background-image:linear-gradient(to center, #E2BCBB, #E4514A);
          }
          .col-1-2 {
          width: 50%;
@@ -17,29 +17,29 @@
 </head>
 <body>
   <div class="container">
-    <a href="jpg/logo.jpg" class="logo">Обучающий портал компании</a>
+    <h1>Обучающий портал компании</h1>
     <nav>
-      <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="cmd.html">Командная строка Win</a></li>
-          <li><a href="macOS.html">Терминал Mac</a></li>
-          <li><a href="git.html">Команды Git</a></li>
-      </ul>
+        <ul>
+        </ul>
     </nav>
   </div>
 <div class="main">
   <div class="container">
-    <div class="col-1-2">
-           <p><a href="index.html"><img src="jpg/logo.jpg" width="50" height="50" border="0"></a></p>
+    <div class="logo">
+      <li><a href="index.html">Главная</a></li>
+           <p><a href="index.html"><img src="jpg/logo.jpg" width="1300" height="450" border="0"></a></p>
     </div>
     <div class="col-2-2">
-           <p><a href="cmd.html"><img src="jpg/git.jpg" width="50" height="50" border="0"></a></p>
+      <li><a href="cmd.html">Командная строка Win</a></li>
+           <p><a href="cmd.html"><img src="jpg/win.jpg" width="250" height="250" border="0"></a></p>
     </div>
     <div class="col-1-2">
-           <p><a href="macOS.html"><img src="jpg/mac.jpg" width="50" height="50" border="0"></a></p>
+      <li><a href="macOS.html">Терминал Mac</a></li>
+           <p><a href="macOS.html"><img src="jpg/mac.jpg" width="250" height="250" border="0"></a></p>
     </div>
     <div class="col-2-2">
-           <p><a href="git.html"><img src="jpg/win.jpg" width="50" height="50" border="0"></a></p>
+      <li><a href="git.html">Команды Git</a></li>
+           <p><a href="git.html"><img src="jpg/git.jpg" width="250" height="250" border="0"></a></p>
     </div>
   </div>
 </div>
